将operator_value权限添加到login_function中

--- a/modules/80_bootstrap_bsp/app/assets/stylesheets/bootstrap/bootstrap-override.less
+++ b/modules/80_bootstrap_bsp/app/assets/stylesheets/bootstrap/bootstrap-override.less
@@ -57,6 +57,10 @@ input, textarea, select, .uneditable-input {
     margin-bottom: 0px;
 }
 
+.disabled {
+    cursor: not-allowed;
+}
+
 .modal-backdrop {
     -moz-opacity: 0.5;
     opacity: .50;
