--- a/modules/10_ironmine_irm/app/views/irm/wf_process_instances/_process_history.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/wf_process_instances/_process_history.html.erb
@@ -1,10 +1,12 @@
+<% btn_flag = process_instance_button?(bo_id,bo_model_name) %>
+<% if process_infos.any? and !btn_flag -%>
 <div class="page-block">
     <table class="page-block-header"><tr>
       <td class="page-block-title">
         <h2 class="block-title"><%=t(:label_irm_wf_process_approval_history)%></h2>
       </td>
       <td class="page-block-button">
-        <%= process_instance_button(bo_id,bo_model_name)%>
+        <%= process_instance_button(bo_id,bo_model_name) if btn_flag %>
       </td>
     </tr></table>
     <div class="page-block-body">
@@ -52,7 +54,6 @@
                     </th>
                   </tr>
                 </thead>
-
                 <% process_infos.each_with_index do |pi,index| %>
                  <tbody  class="yui3-datatable-data processInfo<%=index%2==0? "Even":"Odd"%>">
                   <tr id="<%=pi[:process_instance].id%>" class="yui3-datatable-even processInstance">
@@ -91,3 +92,4 @@
 
     </div>
   </div>
+<% end -%>
