--- a/modules/20_incident_icm/app/views/icm/incident_requests/assign_me_data.html.erb
+++ b/modules/20_incident_icm/app/views/icm/incident_requests/assign_me_data.html.erb
@@ -10,4 +10,5 @@
   <% builder.column(:requested_by_label,{:title=>t(:label_icm_incident_request_requested_by), :width => "110px"})%>
 
   <% builder.column(:external_system_id_label,{:title=>t(:label_irm_external_system),:width => "180px"})%>
+  <% builder.column(:last_response_date,{:title=>t(:label_icm_incident_request_last_date), :width => "150px",:sortable=>true})%>
 <% end %>
