--- a/modules/10_ironmine_irm/app/views/irm/wf_process_instances/_process_history.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/wf_process_instances/_process_history.html.erb
@@ -1,5 +1,5 @@
 <% btn_flag = process_instance_button?(bo_id,bo_model_name) %>
-<% if process_infos.any? and !btn_flag -%>
+<%# if process_infos.any? and !btn_flag -%>
 <div class="page-block">
     <table class="page-block-header"><tr>
       <td class="page-block-title">
@@ -92,4 +92,4 @@
 
     </div>
   </div>
-<% end -%>
+<%# end -%>
