修复报表导出pdf出错

--- a/modules/10_ironmine_irm/app/views/irm/reports/run.pdf.erb
+++ b/modules/10_ironmine_irm/app/views/irm/reports/run.pdf.erb
@@ -1,5 +1,5 @@
 <%= wicked_pdf_stylesheet_link_tag "application","pdf" %>
-<%= wicked_pdf_javascript_include_tag "application","pdf" %>
+<%= wicked_pdf_javascript_include_tag "pdf" %>
 
 <div class="pdf-container">
   <%- with_format('html') do %>
