feature: 目前用户管理界面，用户列表中，无法区分哪些用户是来自LDAP的。 数据库中应该有相应的字段区分，应该将是否来自LDAP（最好能显示来自哪个LDAP源）显示到列表（列表上至少显示是否来自LDAP）以及 人员查看 页面上。
同时，对于LDAP用户，修改用户信息时应该不显示或禁用 密码 更改区域（包括个人信息修改页面），避免不必要的误会。

--- a/modules/10_ironmine_irm/app/views/irm/people/get_data.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/people/get_data.html.erb
@@ -8,4 +8,10 @@
   <% builder.column(:bussiness_phone,{:title=>t(:label_irm_person_bussiness_phone),:searchable=>true})%>
   <% builder.column(:organization_name,{:title=>t(:label_irm_person_organization),:searchable=>true})%>
   <% builder.column(:profile_name,{:title=>t(:label_irm_person_profile)})%>
+  <% builder.column(:ldap_flag,{:title=>t(:label_irm_person_is_ldap),:width => "40px"}) do |data|%>
+    <%= check_img(data[:ldap_flag]) %>
+  <% end %>
+  <% builder.column(:status_code,{:title=>t(:active),:width => "40px"}) do |data|%>
+    <%= check_img(data[:status_code]) %>
+  <% end %>
 <% end %>
