--- a/modules/10_ironmine_irm/app/views/irm/people/_edit_form.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/people/_edit_form.html.erb
@@ -83,6 +83,12 @@
               <% end -%>
             </td>
           </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_person_ldap_source)%></label></td>
+            <td class="data-col"><div><%= @person[:ldap_source_name].blank? ? check_img("N") : @person[:ldap_source_name]%></div></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
       </tbody>
     </table>
   <% end %>
@@ -162,7 +168,7 @@
           <%= content_for :form_block_person   %>
         </div>
 
-        <% if allow_to_function?(:edit_person_email_and_password) -%>
+        <% if allow_to_function?(:edit_person_email_and_password) && @person[:ldap_flag].eql?(Irm::Constant::SYS_NO) -%>
           <!-- 设置密码 -->
           <div class="sub-page-block-header">
             <h3 class="sub-page-block-title"><%=t(:label_irm_person_password_info)%></h3>
@@ -172,13 +178,14 @@
           </div>
         <% end -%>
         <!-- 审批信息 -->
+        <% if false%>
         <div class="sub-page-block-header">
           <h3 class="sub-page-block-title"><%=t(:label_irm_person_approve_info)%></h3>
         </div>
         <div class="sub-page-block-body">
           <%= content_for :form_block_approve %>
         </div>
-
+        <% end %>
       </div>
     </div>
 
