fixed: 修正问题审批页面的html内容显示问题

--- a/modules/10_ironmine_irm/app/views/irm/wf_step_instances/show.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/wf_step_instances/show.html.erb
@@ -12,7 +12,7 @@
                 <td class="label-col"><label><%= attr[:name] %></label></td>
                 <td class="data-3col" colspan="3" width="82%">
                   <label>
-                    <%= Irm::BusinessObject.attribute_of(@bo_instance, attr.attribute_name) %>
+                    <%= raw(Irm::BusinessObject.attribute_of(@bo_instance, attr.attribute_name)) %>
                   </label>
                 </td>
               </tr>
