--- a/modules/10_ironmine_irm/app/views/irm/people/_edit_form.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/people/_edit_form.html.erb
@@ -50,8 +50,8 @@
           <tr>
             <td class="label-col"><label><%= t(:label_irm_identity_language_code) %></label></td>
             <td class="data-col"><%= f.select(:language_code, selectable_languages) %></td>
-            <td class="label-col"><label><%=t(:label_irm_person_fax_number)%></label></td>
-            <td class="data-col"><%=f.text_field :fax_number, {:irm_number_and_cross => true}%></td>
+            <td class="label-col"><label for="time_zone_code"><%=t(:label_irm_person_time_zone)%></label></td>
+            <td class="data-col"><%=f.select :time_zone_code,options_for_select(available_timezone,@person.time_zone_code),{}, :required=>true %></td>
           </tr>
           <tr>
             <td class="label-col"><label><%=t(:label_irm_person_notification_lang)%></label></td>
@@ -82,6 +82,12 @@
                 <%=check_img(@person.status_code.to_s.eql?('ENABLED')? 'Y':'N' )%>
               <% end -%>
             </td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=t(:label_irm_person_fax_number)%></label></td>
+            <td class="data-col"><%=f.text_field :fax_number, {:irm_number_and_cross => true}%></td>
+            <td class="label-col empty"></td>
+            <td class="data-col empty"></td>
           </tr>
       </tbody>
     </table>
