--- a/modules/20_incident_icm/app/views/icm/incident_requests/get_help_desk_data.html.erb
+++ b/modules/20_incident_icm/app/views/icm/incident_requests/get_help_desk_data.html.erb
@@ -2,9 +2,9 @@
     <% builder.column(:request_number,{:title=>t(:label_icm_incident_request_request_number_shot), :width => "55px",:searchable=>true,:sortable=>true})%>
     <% builder.column(:title,{:title=>t(:label_icm_incident_request_title),:searchable=>true,:width => "480px"})  do |data|%>
           <% if(data[:reply_flag].eql?("Y") && data[:close_flag].eql?("N"))%>
-             <%= icon_link("btn-reply", t(:label_icm_reply),{:controller=>"icm/incident_journals",:action=>"new",:request_id=>data[:id]}) %>
+             <% icon_link("btn-reply", t(:label_icm_reply),{:controller=>"icm/incident_journals",:action=>"new",:request_id=>data[:id]}) %>
           <% end %>
-          <%= link_to( "(#{data[:incident_status_id_label]})"+data[:title],{:controller=>"icm/incident_journals",:action=>"new",:request_id=>data[:id]}) %>
+          <%= link_to(data[:title],{:controller=>"icm/incident_journals",:action=>"new",:request_id=>data[:id]}) %>
     <% end %>
     <% builder.column(:external_system_id_label,{:title=>t(:label_irm_external_system),:searchable=>true,:width => "240px"}) do |data| %>
           <CENTER>
