fixed: 调整审批历史表格

--- a/modules/10_ironmine_irm/app/views/irm/wf_process_instances/_step_history.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/wf_process_instances/_step_history.html.erb
@@ -30,12 +30,7 @@
     </td>
     <td>
       <div>
-        <%= step_instance[:assign_approver_name] %>
-      </div>
-    </td>
-    <td>
-      <div>
-        <%= step_instance[:actual_approver_name] %>
+        <%= step_instance[:assign_approver_name] %>/<%= step_instance[:actual_approver_name] %>
       </div>
     </td>
     <td colspan="2">
