--- a/modules/10_ironmine_irm/app/views/irm/people/_new_form.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/people/_new_form.html.erb
@@ -5,6 +5,12 @@
     <table class="form-table">
       <tbody>
           <tr>
+            <td class="label-col"><label for="time_zone_code"><%=t(:label_irm_person_time_zone)%></label></td>
+            <td class="data-col" colspan="3">
+              <%= f.time_zone_select :time_zone,nil, :model => Fwk::I18nTimeZone %>
+            </td>
+          </tr>
+          <tr>
             <td class="label-col"><label><%=t(:label_irm_identity_login_name)%></label></td>
             <td class="data-col"><%= f.text_field(:login_name,:required=>true) %></td>
             <td class="label-col"><label><%=(t :label_irm_person_role)%></label></td>
@@ -32,14 +38,14 @@
           <tr>
             <td class="label-col"><label><%= t(:label_irm_identity_language_code) %></label></td>
             <td class="data-col"><%= f.select(:language_code, selectable_languages) %></td>
-            <td class="label-col"><label for="time_zone_code"><%=t(:label_irm_person_time_zone)%></label></td>
-            <td class="data-col"><%=f.select :time_zone_code,options_for_select(available_timezone,@person.time_zone_code),{}, :required=>true %></td>
-          </tr>
-          <tr>
             <td class="label-col"><label><%=t(:label_irm_person_notification_lang)%></label></td>
             <td class="data-col"><%=f.select :notification_lang,selectable_languages%></td>
+          </tr>
+          <tr>
             <td class="label-col"><label><%=t(:label_irm_person_mobile_phone)%></label></td>
             <td class="data-col"><%=f.text_field :mobile_phone, {:irm_number_only => true}%></td>
+            <td class="label-col"><label><%=t(:label_irm_person_fax_number)%></label></td>
+            <td class="data-col"><%=f.text_field :fax_number, {:irm_number_and_cross => true}%></td>
           </tr>
           <tr>
              <td class="label-col"><label><%=t(:label_irm_person_notification_flag)%></label></td>
@@ -56,11 +62,11 @@
           <tr>
             <td class="label-col"><label><%=t(:label_irm_person_assignment_availability_flag)%></label></td>
             <td class="data-col"><%=f.check_box :assignment_availability_flag%></td>
-            <td class="label-col"><label><%=t(:label_irm_person_fax_number)%></label></td>
-            <td class="data-col"><%=f.text_field :fax_number, {:irm_number_and_cross => true}%></td>
+            <td class="label-col empty"></td>
+            <td class="data-col empty"></td>
           </tr>
           <tr>
-            <td class="label-col"><%= t(:label_irm_person_template_flag) %></td>
+            <td class="label-col"><label><%= t(:label_irm_person_template_flag) %></label></td>
             <td class="data-col"><%= f.check_box(:template_flag) %></td>
             <td class="label-col empty"></td>
             <td class="data-col empty"></td>
