--- a/modules/10_ironmine_irm/app/views/irm/people/show.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/people/show.html.erb
@@ -20,7 +20,7 @@
       <tbody>
           <tr>
             <td class="label-col"><label for="time_zone_code"><%=t(:label_irm_person_time_zone)%></label></td>
-            <td class="data-col"><%= Irm::LookupValue.get_meaning('TIMEZONE', @person.time_zone_code) %></td>
+            <td class="data-col"><%= Time.zone.to_s %></td>
             <td class="label-col"></td>
             <td class="data-col"></td>
           </tr>
