--- a/modules/10_ironmine_irm/app/views/irm/common/_crop.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/common/_crop.html.erb
@@ -9,7 +9,7 @@
             $("#crop_w").val(crop.w);
             $("#crop_h").val(crop.h);
           <% if defined?(display_dom)%>
-            $("#<%=display_dom%>").html("=>"+crop.w+"px X "+crop.h+"px")
+            $("#<%=display_dom%>").html("=>"+crop.w+"px X "+crop.h+"px");
           <%end%>
       }
       function onSelect(crop){
@@ -18,15 +18,15 @@
             $("#crop_w").val(crop.w);
             $("#crop_h").val(crop.h);
           <% if defined?(display_dom)%>
-            $("#<%=display_dom%>").html("=>"+crop.w+"px X "+crop.h+"px")
+            $("#<%=display_dom%>").html("=>"+crop.w+"px X "+crop.h+"px");
           <%end%>
       }
       var currentCrop = $.Jcrop('#crop_box',{
-          onChange: onChange  ,
+          onChange: onChange,
           onSelect: onSelect
       });
       <% if defined?(best_size)%>
-        <% current_size = [0,0]+best_size%>
+        <% current_size = [0,0]+best_size %>
         currentCrop.animateTo(<%=current_size%>);
       <% end%>
   });
