--- a/modules/20_incident_icm/app/views/icm/incident_requests/index.html.erb
+++ b/modules/20_incident_icm/app/views/icm/incident_requests/index.html.erb
@@ -19,7 +19,7 @@
     </td>
     <td class="page-block-button">
       <%= link_to t(:new), {:action => "new"},{:class=>"btn btn-primary"}%>
-      <%= link_to t(:label_icm_incident_request_assign_me), {:action => "edit_assign_me"},{:class=>"btn"}%>
+      <%= link_to t(:label_icm_incident_request_assign_me) + "(#{count_assign_me(Irm::Person.current)})", {:action => "edit_assign_me"},{:class=>"btn"}%>
       <%= link_to t(:label_action_assign_dashboard), {:action => "assign_dashboard"},{:class=>"btn"}%>
       <a href="javascript:void(0)" id="exportData" class="btn btn-info"><%= t(:export) %></a>
     </td>
